--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "menu.h": "c",
         "utilities.h": "c",
         "stdio.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "cajero.h": "c"
     }
 }
