--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "${file}",
                 "${workspaceFolder}\\uwunya\\menu\\menu.c",
                 "${workspaceFolder}\\uwunya\\utilities\\utilities.c",
+                "${workspaceFolder}\\cajerotuani\\cajero.c"
                 
             ],
             "options": {
