--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,10 +6,10 @@
             "command": "gcc",
             "args": [
                 "-o",
-                "./bubbleSort/${fileBasenameNoExtension}.exe",
+                "./notasMusicales/${fileBasenameNoExtension}.exe",
                 "${file}",
-                "${workspaceFolder}\\uwunya\\utilities\\utilities.c"
-                
+                "./notasMusicales/notes.c",
+                "./notasMusicales/menu.c",
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
